update website homepage

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ website:
   navbar:
     background: "#2af0f7" # Teal
     foreground: "light"
+    pinned: true
     left:
       - href: index.qmd
         text: About
