--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,9 @@ website:
       - href: publications/publications.qmd
         text: Publications
 
+      - href: talks/talks.qmd
+        text: Talks
+
       - href: cv/cv.qmd
         text: CV
 
